2005-07-18  Stefan Jahn  <stefan@lkcc.org>

	* acanalysis.tex (subsection{Non-ideal transformer}): Fixed
	conversion formula for non-ideal transformer.

2005-06-19  Stefan Jahn  <stefan@lkcc.org>

	* literature.bib: Added some more books and articles.

2005-05-15  Stefan Jahn  <stefan@lkcc.org>

	* coplanar.tex (section{Coplanar waveguide step}): Added
	S-, Y- and Z-parameters of coplanar step.

2005-05-11  Stefan Jahn  <stefan@lkcc.org>

	* qucsator.1: Updated manpages.

	* coplanar.tex (section{Coplanar waveguide step}): Documented
	coplanar waveguide impedance step.

2005-05-03  Stefan Jahn  <stefan@lkcc.org>

	* coplanar.tex (section{Coplanar waveguide gap}): Documented
	coplanar series gap.

2005-05-01  Stefan Jahn  <stefan@lkcc.org>

	* coplanar.tex (section{Coplanar waveguide open}): Documented
	both the open and short circuit for coplanar waveguides.

2005-04-19  Stefan Jahn  <stefan@lkcc.org>

	* transient.tex (subsection{Depletion Capacitance}): Fixed tiny
	typo in documentation of depletion charge.

	* coplanarzl.m: Fixed wave resistance computation.

	* coplanar.tex (subsection{Evaluation of losses}): Fixed some
	typo in the documentation of coplanar waveguide.

2005-04-12  Stefan Jahn  <stefan@lkcc.org>

	* dcanalysis.tex (subsubsection{Motivation}): Documented
	least square solution using QR decomposition.

2005-04-06  Stefan Jahn  <stefan@lkcc.org>

	* microstrip.tex (section{Microstrip via hole}): Fixed typo
	in microstrip via hole documentation.

	* dcanalysis.tex (subsection{QR decomposition}): Documented
	QR decomposition.

2005-03-12  Stefan Jahn  <stefan@lkcc.org>

	* devices.tex (subsection{Small signal model}): Documented
	SPICE small signal equivalent BJT circuit.

	* microstrip.tex (subsection{Strip thickness correction}): 
	Documented strip thickness corrections for coupled
	microstrips.

2005-02-23  Stefan Jahn  <stefan@lkcc.org>

	* microstrip.tex (section{Microstrip tee junction}): Added