@@ -23,6 +23,7 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
+- Allow variables from other datasets in equations.
 - Use minimum noise figure for noise circles as default.
 - Use maximum gain for gain circles as default.
 - Allow impedances other than 50ohms in rtoz(), ztor(), stoy(), ytos(),
