@@ -1,3 +1,8 @@
+2005-09-25  Stefan Jahn  <stefan@lkcc.org>
+
+	* transient.cpp, trsolver.cpp: Fixed forward/backward Euler
+	method remarks.
+
 2005-07-18  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsdefs.h (qucs_definition_available): Allowing negative
