@@ -1,3 +1,8 @@
+2005-09-25  Stefan Jahn  <stefan@lkcc.org>
+
+	* transient.tex (subsubsection{Backward Euler}): Fixed
+	forward/backward Euler confusions.
+
 2005-07-18  Stefan Jahn  <stefan@lkcc.org>
 
 	* acanalysis.tex (subsection{Non-ideal transformer}): Fixed
